Fix alignment of bottom-bar.

--- a/style.css
+++ b/style.css
@@ -135,11 +135,12 @@ div.scrollpane {
 div.bottombar {
     position: absolute;
     bottom: 0;
-    height: 100;
+    height: 100px;
+    box-sizing: border-box;
     border: solid;
     border-width: 1px;
     border-color: #fff;
-    width: 880px;
+    width: 902px;
     padding: 10;
     background-color: #111;
 }
